--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="manager">
       <img src="manager.jpg" alt="Менеджер" class="manager-photo" />
       <div class="manager-info">
-        <h2>Евгений Золотарёв</h2>
+        <h2>Артур Асламов</h2>
         <p>Менеджер по подбору персонала</p>
       </div>
     </div>
