--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
 <!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
@@ -28,7 +27,6 @@
        src="https://www.facebook.com/tr?id=558697003977909&ev=PageView&noscript=1"/>
 </noscript>
 <!-- End Meta Pixel Code -->
-
 </head>
 <body>
   <div class="container">
@@ -37,10 +35,10 @@
     <p>Свяжитесь с менеджером, чтобы получить актуальные вакансии и заполнить анкету для участвия в программе.</p>
 
     <div class="buttons">
-      <a href="https://wa.me/447594876048?text=Здравствуйте.%20Хочу%20участвовать%20в%20дополнительном%20наборе!" class="btn whatsapp">
+      <a href="https://wa.me/447871715204?text=Здравствуйте!%20Хочу%20участвовать%20в%20дополнительном%20наборе!" class="btn whatsapp">
         <i class="fab fa-whatsapp"></i> WhatsApp
       </a>
-      <a href="https://t.me/brite_jobs_manager" class="btn telegram">
+      <a href="https://t.me/Join_uk_job" class="btn telegram">
         <i class="fab fa-telegram-plane"></i> Telegram
       </a>
     </div>
@@ -48,7 +46,7 @@
     <div class="manager">
       <img src="manager.jpg" alt="Менеджер" class="manager-photo" />
       <div class="manager-info">
-        <h2>Артур Асламов</h2>
+        <h2>Сергей Смирнов</h2>
         <p>Менеджер по подбору персонала</p>
       </div>
     </div>
