--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <p>Свяжитесь с менеджером, чтобы получить актуальные вакансии и заполнить анкету для участвия в программе.</p>
 
     <div class="buttons">
-      <a href="https://wa.me/447871715204?text=Здравствуйте.%20Хочу%20участвовать%20в%20дополнительном%20наборе!" class="btn whatsapp">
+      <a href="https://wa.me/447743382013?text=Здравствуйте.%20Хочу%20участвовать%20в%20дополнительном%20наборе!" class="btn whatsapp">
         <i class="fab fa-whatsapp"></i> WhatsApp
       </a>
-      <a href="https://t.me/Join_uk_job" class="btn telegram">
+      <a href="https://t.me/alexchernyshev08" class="btn telegram">
         <i class="fab fa-telegram-plane"></i> Telegram
       </a>
     </div>
@@ -47,7 +47,7 @@
     <div class="manager">
       <img src="manager.jpg" alt="Менеджер" class="manager-photo" />
       <div class="manager-info">
-        <h2>Сергей Смирнов</h2>
+        <h2>Александр Чернышев</h2>
         <p>Менеджер по подбору персонала</p>
       </div>
     </div>
