--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Связь с нами</title>
+  <title>Тест с задержкой и Meta Pixel</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -31,43 +31,44 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.gif" alt="Логотип" class="logo" />
-    <h1>🔔 Идёт дополнительный набор на сезонные работы</h1>
-    <p>Свяжитесь с менеджером, чтобы получить актуальные вакансии и заполнить анкету для участвия в программе.</p>
+    <h1>🔔 Тест с задержкой и пикселем</h1>
+    <p>Теперь Meta Pixel точно успевает отправить событие при клике.</p>
 
     <div class="buttons">
-      <a href="https://wa.me/447743382013?text=Здравствуйте.%20Хочу%20участвовать%20в%20дополнительном%20наборе!" class="btn whatsapp">
+      <a href="#" class="btn whatsapp" id="whatsapp-btn">
         <i class="fab fa-whatsapp"></i> WhatsApp
       </a>
-      <a href="https://t.me/alexchernyshev08" class="btn telegram">
+      <a href="#" class="btn telegram" id="telegram-btn">
         <i class="fab fa-telegram-plane"></i> Telegram
       </a>
     </div>
-
-    <div class="manager">
-      <img src="manager.jpg" alt="Менеджер" class="manager-photo" />
-      <div class="manager-info">
-        <h2>Александр Чернышев</h2>
-        <p>Менеджер по подбору персонала</p>
-      </div>
-    </div>
   </div>
 
-  <!-- Meta Pixel Click Tracking -->
+  <!-- CLICK WITH DELAY -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      const whatsappBtn = document.querySelector('.btn.whatsapp');
-      const telegramBtn = document.querySelector('.btn.telegram');
+      const whatsappBtn = document.getElementById('whatsapp-btn');
+      const telegramBtn = document.getElementById('telegram-btn');
 
       if (whatsappBtn) {
-        whatsappBtn.addEventListener('click', function () {
+        whatsappBtn.addEventListener('click', function (e) {
+          e.preventDefault();
           fbq('track', 'Contact', { content_name: 'WhatsApp' });
+          console.log('WhatsApp click → отслежено, ждём переход...');
+          setTimeout(() => {
+            window.location.href = "https://wa.me/447871715204?text=Здравствуйте.%20Хочу%20участвовать%20в%20дополнительном%20наборе!";
+          }, 300);
         });
       }
 
       if (telegramBtn) {
-        telegramBtn.addEventListener('click', function () {
+        telegramBtn.addEventListener('click', function (e) {
+          e.preventDefault();
           fbq('track', 'Contact', { content_name: 'Telegram' });
+          console.log('Telegram click → отслежено, ждём переход...');
+          setTimeout(() => {
+            window.location.href = "https://t.me/Join_uk_job";
+          }, 300);
         });
       }
     });
