--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="manager">
       <img src="manager.jpg" alt="Менеджер" class="manager-photo" />
       <div class="manager-info">
-        <h2>Арсен</h2>
+        <h2>Артур</h2>
         <p>Менеджер по подбору персонала</p>
       </div>
     </div>
@@ -74,7 +74,7 @@
           e.preventDefault();
           fbq('track', 'Contact', { content_name: 'Telegram' });
           setTimeout(() => {
-            window.location.href = "https://t.me/arsen_jobs";
+            window.location.href = "https://t.me/brite_jobs_managr";
           }, 300);
         });
       }
