--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           e.preventDefault();
           fbq('track', 'Contact', { content_name: 'Telegram' });
           setTimeout(() => {
-            window.location.href = "https://t.me/@Join_uk_job";
+            window.location.href = "https://t.me/Join_uk_job";
           }, 300);
         });
       }
