--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="manager">
       <img src="manager.jpg" alt="Менеджер" class="manager-photo" />
       <div class="manager-info">
-        <h2>Тимур</h2>
+        <h2>Сергей Смирнов</h2>
         <p>Менеджер по подбору персонала</p>
       </div>
     </div>
@@ -64,7 +64,7 @@
           e.preventDefault();
           fbq('track', 'Contact', { content_name: 'WhatsApp' });
           setTimeout(() => {
-            window.location.href = "https://wa.me/447547320274?text=Здравствуйте.%20Интересует%20участие%20в%20дополнительном%20наборе!";
+            window.location.href = "https://wa.me/447871715204?text=Здравствуйте.%20Интересует%20участие%20в%20дополнительном%20наборе!";
           }, 300);
         });
       }
@@ -74,7 +74,7 @@
           e.preventDefault();
           fbq('track', 'Contact', { content_name: 'Telegram' });
           setTimeout(() => {
-            window.location.href = "https://t.me/yazagul";
+            window.location.href = "https://t.me/Join_uk_job";
           }, 300);
         });
       }
