--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script');
 
-    fbq('init', '702108089472381'); 
+    fbq('init', '1369926611226811'); 
     fbq('track', 'PageView');
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=702108089472381&ev=PageView&noscript=1"/>
+         src="https://www.facebook.com/tr?id=1369926611226811&ev=PageView&noscript=1"/>
   </noscript>
   <!-- End Meta Pixel Code -->
 </head>
@@ -47,7 +47,7 @@
     <div class="manager">
       <img src="manager.jpg" alt="Менеджер" class="manager-photo" />
       <div class="manager-info">
-        <h2>Артур Прилуцкий</h2>
+        <h2>Александр</h2>
         <p>Менеджер по подбору персонала</p>
       </div>
     </div>
@@ -64,7 +64,7 @@
           e.preventDefault();
           fbq('track', 'Contact', { content_name: 'WhatsApp' });
           setTimeout(() => {
-            window.location.href = "https://wa.me/447520639435?text=Здравствуйте.%20Интересует%20участие%20в%20дополнительном%20наборе!";
+            window.location.href = "https://wa.me/447871708993?text=Здравствуйте.%20Интересует%20участие%20в%20дополнительном%20наборе!";
           }, 300);
         });
       }
@@ -74,7 +74,7 @@
           e.preventDefault();
           fbq('track', 'Contact', { content_name: 'Telegram' });
           setTimeout(() => {
-            window.location.href = "https://t.me/brite_jobs_managr";
+            window.location.href = "https://t.me/alexchernyshev08";
           }, 300);
         });
       }
